tests/type_check/pass/functions/anon_fn_from_int_to_int.pj
fn(x: Int) do x end
