tests/type_check/fail/functions/wrong_type_anon_fn_call_arg.pj
foo = fn(n: Int) do 1 end

foo(true)
